# yanbao

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  yanbao  yanbao.cmd  yanbao.ps1  言序.toml
.github/workflows/: auto-release.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  ROADMAP.md
schemas/: yanbao-cli-output-v1.json
scripts/: generate-build-metadata.sh  generate-sbom.sh  install.ps1  install.sh  release-latest-policy.sh  test-audit-capability-negotiation.sh  test-build-metadata-compiler.sh  test-release-latest-policy.sh  test-release-sbom-binding.sh  verify-release-sbom.sh  verify-toolchain.sh  write-sha256.ps1
src/: main.rs  manifest.rs  主.yx  事务.yx  命令行.yx  审计.yx  核心.yx  输出.yx
tests/: cli.rs  事务.yx  事务文件.yx  命令行.yx  审计.yx  工程协议.yx  超时.yx  输出.yx
